--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <script type="text/javascript" src= "js/script.js"></script>
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/styles.css">
+        <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
         <title>Maxellcid</title>
     </head>
     <body>
