adding basic links for contact
adding some contact links

--- a/index.html
+++ b/index.html
@@ -9,5 +9,32 @@
     </head>
     <body>
 
+    <h1><img class = "logo"src="images/maxellscript logo.png" alt="logo"> Arnulfo Rafael Díaz Ariza</h1>
+    <main></main>
+    <footer>
+    <section class ="contactMe">
+        <h5>Maxellcid</h5>
+        <H6>ContactMe</H6>
+        <ul>
+            <li><a href="https://github.com/maxellcid">Github</a></li>
+            <li><a href="https://www.instagram.com/maxellcid/?hl=es-la">Instagram</a></li>
+            <li><a href="https://twitter.com/Maxellcid">Twitter</a></li>
+            <li><a href="mailto:maxellcid@gmail.com?Subject=Interesados%20en%20mi%20perfil">Email</a></li>
+            <li><a href="https://www.linkedin.com/in/arnulfo-rafael-d%C3%ADaz-ariza-a5936926/">LinkedIn</a></li>
+            <li><a href="https://www.facebook.com/Maxellcid">Facebook</a></li>
+            <li><a href="https://www.youtube.com/channel/UCRPbAPDsGrqcA6DjTUxXqVg?view_as=subscriber">Youtube</a></li>
+
+        </ul>
+        <P></P>
+    </section>
+    <section>
+        <H6></H6>
+        <P></P>
+    </section>
+    <section>
+        <H6></H6>
+        <P></P>
+    </section>
+    </footer>
     </body>
 </html>
