meta refreh content correction

--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="Author" lang="es" content="Arnulfo Díaz">
-    <meta name="description" content="Front-end, Developer, HTML, CSS , Javascript, Programador , desarrollo">
-    <meta name="keywords" content="Front-end, Developer, HTML, CSS , Javascript, Programador , desarrollo">
-    <meta http-equiv="refresh" content="0; url="https://maxellcid.github.io/">
+    <meta name="Author" lang="es" content="Arnulfo Díaz" />
+    <meta
+      name="description"
+      content="Front-end, Developer, HTML, CSS , Javascript, Programador , desarrollo"
+    />
+    <meta
+      name="keywords"
+      content="Front-end, Developer, HTML, CSS , Javascript, Programador , desarrollo"
+    />
+    <!-- <meta http-equiv="refresh" content="0; url="https://maxellcid.github.io/"> -->
     <title>Arnulfo Díaz</title>
   </head>
 
